[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hela"
version = "0.1.0-dev"
description = "Chama management for the 21st century"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Gabriel Mahia", email = "contact@aikungfu.dev"}]
keywords = ["chama", "rosca", "kenya", "fintech", "africa", "mpesa", "savings"]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
